Stop overflow of "timesheet" in the punchclock view. Fixes SDEV-571.

--- a/labgeeks/static/css/calendar.less
+++ b/labgeeks/static/css/calendar.less
@@ -79,13 +79,19 @@
     }
 }
 
+.key_wrapper {
+    max-width: 7em;
+    margin: auto;
+}
+
 #calendar_key {
     padding: 15px;
     border: 1px solid @grayLight;
+    max-width: 15em;
 
     .key {
         height: 5em;
-        max-width: 5em;
+        width: 7em;
         float: left;
         text-align: center;
         margin: auto;
@@ -112,7 +118,7 @@
     }
 
     @media (min-width: @screen-md-min) {
-        max-width: 20em;
+        max-width: 15em;
     }
 
     strong {
